2003-02-15  ------ omnetpp-2.3b1 released ------

2003-02-10  Andras Varga

	* chist.h: cHistogramBase: added setNumCells() method

2003-01-30  Andras Varga

	* defs.h: added MathFunc4Args (it was needed by triang() and other 
	distributions); also added its handling where needed

2003-01-29  Andras Varga

	* chead.h: added argcount paremeter to findFunction()

2003-01-22  Andras Varga

	* ctypes.h, macros.h: increased type safety of Register_Function() and 
	cFunctionType

2003-01-20  Andras Varga

	* contents of obsolete header cstk.h removed

2003-01-19  Andras Varga

	* distrib.h (new): contains function declarations for distributions 
	contributed by Werner Sandmann (TU Bonn): continuous distributions
        gamma_d(), beta(), erlang_k(), chi_square(), student_t(), cauchy(), 
        triang(),lognormal(), weibull(), pareto_shifted(), and discrete
        distributions bernoulli(), binomial(), geometric(), negbinomial(),
        hypergeometric(), poisson()
	
	* random.h (new), distrib.h; utils.h: From util.h, existing 
	distributions (uniform, normal,	exponential, etc) were moved to 
	distrib.h, and random number generator functions were moved to new file
	random.h.

	* distrib.h: bugfix: 2nd arg to normal() is really the stddev, not
	variance. Documentation fixed.

2003-01-14  Andras Varga

	* cwatch.h: added support for 'bool'

	* index.h: cOutVector doc moved from group 'SimSupport' to 'Statistics'

	* cmodule.h: new method waitAndEnqueue() added to cSimpleModule.

	* cmodule.h: putAsideQueue was DEPRECATED. putAsideQueue is currently 
	used implicitly by the methods wait(), receiveOn() and receiveNewOn()
	to insert messages that arrive during the wait period or not on the 
	specified gate. The receive() functions look first on the 
	putAsideQueue and only then at the future events.

	As practice has shown, the purpose of the putAsideQueue was very
	often misunderstood, and its implicit use by wait() and the message