@@ -1,3 +1,8 @@
+2003-03-15  Andras Varga
+
+	* cgate.h, cchannel.h: refined documentation on channel attributes,
+	isBusy() and transmissionFinishes().
+
 2003-02-15  ------ omnetpp-2.3b1 released ------
 
 2003-02-10  Andras Varga
